# C--Project-HaGame

./: .clang-format  CMakeLists.txt  README.md  main.cpp
MyGame/: .clang-tidy  CMakeLists.txt  hagame.cpp  hagame.h  main.cpp  menu.cpp  object.cpp  object.h  questionlist.cpp
MyGame/header/: hagame.h  questionlist.h
MyGame/resource/: source.qrc
MyGame/source/: MyGame.pro  hagame.cpp  main.cpp  menu.cpp  object.cpp  questionlist.cpp  score.cpp
include/: hagame.h  menu.h  score.h
resource/: source.qrc
src/: hagame.cpp  menu.cpp  object.cpp  questionlist.cpp  score.cpp
test/: Makefile  test.pro  tst_test1.cpp
